# multiclickfix

./: CMakeLists.txt  LICENSE.MD  README.MD
inc/: dll.hpp  wingui.hpp
src/: dll.cpp  exe.cpp  wingui.cpp
